SERVER-93707 Update config server with correct replica set config version upon shard replica set change (BACKPORT-23065) (#29023)

GitOrigin-RevId: 6cd6a678b2256a527f5aba10da6c25b8d6c5fd69